--- a/apps/opik-backend/src/test/resources/config-test.yml
+++ b/apps/opik-backend/src/test/resources/config-test.yml
@@ -8,6 +8,7 @@ logging:
   #  Description: Individual logger configuration
   loggers:
     com.comet: DEBUG
+    com.comet.opik.infrastructure.llm: INFO
 
 # Description: state database configuration
 # https://www.dropwizard.io/en/stable/manual/configuration.html#database
