--- a/apps/opik-backend/config.yml
+++ b/apps/opik-backend/config.yml
@@ -568,6 +568,9 @@ serviceToggles:
   # Default: false
   # Description: Whether or not Optimization Studio feature is enabled
   optimizationStudioEnabled: ${TOGGLE_OPTIMIZATION_STUDIO_ENABLED:-"false"}
+  # Default: false
+  # Description: Whether or not Collaborators tab feature is enabled
+  collaboratorsTabEnabled: ${TOGGLE_COLLABORATORS_TAB_ENABLED:-"true"}
 
 # Trace Thread configuration
 traceThreadConfig:
