[CM-13782]: disable the flag

--- a/apps/opik-backend/src/test/resources/config-test.yml
+++ b/apps/opik-backend/src/test/resources/config-test.yml
@@ -430,7 +430,7 @@ serviceToggles:
   optimizationStudioEnabled: "false"
   # Default: false
   # Description: Whether or not Collaborators tab feature is enabled
-  collaboratorsTabEnabled: "true"
+  collaboratorsTabEnabled: "false"
 
 # Trace Thread configuration
 traceThreadConfig:
