--- a/apps/opik-backend/config.yml
+++ b/apps/opik-backend/config.yml
@@ -573,7 +573,7 @@ serviceToggles:
   optimizationStudioEnabled: ${TOGGLE_OPTIMIZATION_STUDIO_ENABLED:-"false"}
   # Default: false
   # Description: Whether or not Collaborators tab feature is enabled
-  collaboratorsTabEnabled: ${TOGGLE_COLLABORATORS_TAB_ENABLED:-"true"}
+  collaboratorsTabEnabled: ${TOGGLE_COLLABORATORS_TAB_ENABLED:-"false"}
 
 # Trace Thread configuration
 traceThreadConfig:
