--- a/.github/workflows/publish_helm_chart.yaml
+++ b/.github/workflows/publish_helm_chart.yaml
@@ -52,6 +52,8 @@ jobs:
           run: |
             set -e
             cd deployment/helm_chart/opik
+            helm repo add mysql https://comet-ml.github.io/comet-mysql-helm/
+            helm repo add cloudpirates oci://registry-1.docker.io/cloudpirates
             helm repo add bitnami https://charts.bitnami.com/bitnami
             helm repo add clickhouse-operator https://docs.altinity.com/clickhouse-operator
             helm dependency build
