--- a/deployment/helm_chart/opik/values.yaml
+++ b/deployment/helm_chart/opik/values.yaml
@@ -27,17 +27,17 @@ serviceAccount:
 demoDataJob:
   enabled: true
 
-# chartMigration:
-#   # Enable this for the first upgrade that includes a migration from Bitnami charts and images
-#   # After successful migration, set this back to false
-#   enabled: false
-#   image: "bitnamilegacy/kubectl:1.29.11"
-#   # Service account name (must have permissions to delete StatefulSets and Deployments)
-#   serviceAccountName: ""
-#   # Node selector for the migration job pod (falls back to global nodeSelector if not specified)
-#   nodeSelector: {}
-#   # Tolerations for the migration job pod (falls back to global tolerations if not specified)
-#   tolerations: []
+chartMigration:
+  # Enable this for the first upgrade that includes a migration from Bitnami charts and images
+  # After successful migration, set this back to false
+  enabled: true
+  image: "bitnamilegacy/kubectl:1.29.11"
+  # Service account name (must have permissions to delete StatefulSets and Deployments)
+  serviceAccountName: ""
+  # Node selector for the migration job pod (falls back to global nodeSelector if not specified)
+  nodeSelector: {}
+  # Tolerations for the migration job pod (falls back to global tolerations if not specified)
+  tolerations: []
 
 
 nodeSelector: {}
