--- a/deployment/docker-compose/docker-compose.yaml
+++ b/deployment/docker-compose/docker-compose.yaml
@@ -3,7 +3,7 @@ name: opik
 services:
   mysql:
     image: mysql:8.4.2
-    pull_policy: if_not_present
+    pull_policy: missing
     hostname: mysql
     environment:
       MYSQL_ROOT_PASSWORD: opik
@@ -20,7 +20,7 @@ services:
 
   redis:
     image: redis:7.2.4-alpine3.19
-    pull_policy: if_not_present
+    pull_policy: missing
     hostname: redis
     command: redis-server --requirepass opik
     healthcheck:
@@ -44,7 +44,7 @@ services:
       "
   clickhouse:
     image: clickhouse/clickhouse-server:25.3.6.56-alpine
-    pull_policy: if_not_present
+    pull_policy: missing
     hostname: clickhouse
     environment:
       CLICKHOUSE_DB: opik
@@ -74,7 +74,7 @@ services:
 
   zookeeper:
     image: docker.io/bitnamilegacy/zookeeper:3.9.3-debian-12-r16
-    pull_policy: if_not_present
+    pull_policy: missing
     hostname: zookeeper
     environment:
       ZOO_MY_ID: 1
@@ -90,7 +90,7 @@ services:
 
   minio:
     image: minio/minio:RELEASE.2025-03-12T18-04-18Z
-    pull_policy: if_not_present
+    pull_policy: missing
     environment:
       MINIO_ROOT_USER: ${MINIO_ROOT_USER:-THAAIOSFODNN7EXAMPLE}
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD:-LESlrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY}
@@ -106,7 +106,7 @@ services:
 
   mc:
     image: minio/mc:RELEASE.2025-03-12T17-29-24Z
-    pull_policy: if_not_present
+    pull_policy: missing
     depends_on:
       - minio
     entrypoint: >
@@ -119,7 +119,7 @@ services:
 
   backend:
     image: ghcr.io/comet-ml/opik/opik-backend:${OPIK_VERSION:-latest}
-    pull_policy: if_not_present
+    pull_policy: missing
     profiles:
       - backend
       - opik
@@ -194,7 +194,7 @@ services:
   python-backend:
     image: ghcr.io/comet-ml/opik/opik-python-backend:${OPIK_VERSION:-latest}
     # change to 'build' when developing python-backend
-    pull_policy: ${PYTHON_BACKEND_PULL_POLICY:-always}
+    pull_policy: ${PYTHON_BACKEND_PULL_POLICY:-missing}
     profiles:
       - backend
       - opik
@@ -237,7 +237,7 @@ services:
 
   guardrails-backend:
     image: ghcr.io/comet-ml/opik/opik-guardrails-backend:${OPIK_VERSION:-latest}
-    pull_policy: if_not_present
+    pull_policy: missing
     profiles:
       - guardrails
     build:
@@ -255,7 +255,7 @@ services:
 
   demo-data-generator:
     image: ghcr.io/comet-ml/opik/opik-python-backend:${OPIK_VERSION:-latest}
-    pull_policy: if_not_present
+    pull_policy: missing
     profiles:
       - opik
       - local-be-fe
@@ -278,7 +278,7 @@ services:
 
   frontend:
     image: ghcr.io/comet-ml/opik/opik-frontend:${OPIK_VERSION:-latest}
-    pull_policy: if_not_present
+    pull_policy: missing
     profiles:
       - opik
       - local-be
@@ -286,39 +286,32 @@ services:
     build:
       context: ../../apps/opik-frontend
       dockerfile: Dockerfile
-    #   cache_from:
-    #     - alpine:latest
-    #     - nginx:1.29.3-alpine-otel
-    #     - node:20.19.5-alpine3.22
-    #     - type=local,src=./.cache
-      # cache_to:
-      #   - type=local,dest=./.cache
     hostname: frontend
     ports:
-      - "${NGINX_PORT:-8080}:${NGINX_PORT:-8080}" # Frontend server port (configurable via NGINX_PORT env var)
+      - "${NGINX_PORT:-5173}:${NGINX_PORT:-5173}" # Frontend server port (configurable via NGINX_PORT env var)
     volumes:
       - ./nginx_${OPIK_FRONTEND_FLAVOR:-default}_local.conf:/etc/nginx/templates/default.conf.template:ro
     depends_on:
       backend:
         condition: service_healthy
+      # The following dependency on otel-collector is required only when distributed tracing is enabled (OTEL_TRACE=on).  
+      # Uncomment to ensure frontend waits for otel-collector to be healthy before starting. 
       # otel-collector:
       #   condition: service_healthy
     healthcheck:
-      test: [ "CMD-SHELL", "curl --fail --fail-early http://localhost:${NGINX_PORT:-8080}/health" ]
+      test: [ "CMD-SHELL", "curl --fail --fail-early http://localhost:${NGINX_PORT:-5173}/health" ]
       interval: 1s
       timeout: 30s
       retries: 10
       start_period: 1s
     environment:
       OPIK_VERSION: ${OPIK_VERSION:-latest}
-      NGINX_PORT: ${NGINX_PORT:-8080}
+      NGINX_PORT: ${NGINX_PORT:-5173}
       NGINX_CONF_SUFFIX: ${NGINX_CONF_SUFFIX:-local}
       OTEL_TRACE: ${OTEL_TRACE:-off}
       OTEL_COLLECTOR_HOST: ${OTEL_COLLECTOR_HOST:-otel-collector}
       OTEL_COLLECTOR_PORT: ${OTEL_COLLECTOR_PORT:-4317}
-      # NGINX_EXTRA_ACCESS_LOG: access_log syslog:server=otel-collector:5140 logger-json;
-      # NGINX_EXTRA_ERROR_LOG: error_log syslog:server=otel-collector:5140 error;
-      
+
   # Jaeger - receives traces via OTLP
   jaeger:
     image: jaegertracing/all-in-one:latest
@@ -327,8 +320,8 @@ services:
     hostname: jaeger
     ports:
       - "16686:16686" # UI
-      - "14317:4317"   # OTLP gRPC
-      - "14318:4318"   # OTLP HTTP
+      - "14317:4317" # OTLP gRPC
+      - "14318:4318" # OTLP HTTP
     environment:
       - COLLECTOR_OTLP_ENABLED=true
     healthcheck:
