--- a/deployment/docker-compose/docker-compose.local-be.yaml
+++ b/deployment/docker-compose/docker-compose.local-be.yaml
@@ -8,10 +8,11 @@ services:
   # This is mostly for consistent operations like docker compose up/down and to avoid hanging containers
   # Demo data creation is triggered from opik.sh and dev-runner.sh
   demo-data-generator:
-    depends_on: !override []
+    depends_on: !override
+      [ ]
   # Override to not depend on backend
   frontend:
-    depends_on:
+    depends_on: !override
       mysql:
         condition: service_healthy
       clickhouse:
