fix for local-be

--- a/deployment/docker-compose/nginx_local_be_local.conf
+++ b/deployment/docker-compose/nginx_local_be_local.conf
@@ -8,6 +8,12 @@ large_client_header_buffers 4 64k;
 resolver 127.0.0.11 valid=30s;
 resolver_timeout 2s;
 
+upstream backend {
+    zone backend 64k;
+    server host.docker.internal:8080 resolve;
+    keepalive 16;
+}
+
 server {
     listen ${NGINX_PORT} default_server;
     server_name localhost;
@@ -36,7 +42,7 @@ server {
     location @api {
         rewrite /api/(.*) /$1  break;
         # Proxy to local backend running on host machine
-        proxy_pass http://host.docker.internal:8080;
+        proxy_pass http://backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
