--- a/sdks/opik_optimizer/pyproject.toml
+++ b/sdks/opik_optimizer/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "opik_optimizer"
-version = "2.3.5"
+version = "3.0.0rc1"
 description = "Agent optimization with Opik"
 authors = [
     {name = "Comet ML", email = "support@comet.com"}
