[NA] [FE] Collaborators tab (#4392)
* [CM-13782]: add new tab and table (no data)

* [CM-13782]: fetch and display table data

* [CM-13782]: handle plugins

* [CM-13782]: make columns resizable

* [CM-13782]: add feature flag

* [CM-13782]: add explaination to the tab

* [CM-13782]: clean up

* [CM-13782]: disable the flag

* [CM-13783]: add search (#4401)

* [CM-13782]: simplify API hook usage

* [CM-13782]: move Collaborators tab into plugin

* [CM-13782]: remove wrong formatting

--- a/apps/opik-backend/src/test/resources/config-test.yml
+++ b/apps/opik-backend/src/test/resources/config-test.yml
@@ -462,6 +462,9 @@ serviceToggles:
   # Default: true
   # Description: Whether or not Opik Built-in provider is enabled
   opikbuiltinProviderEnabled: "true"
+  # Default: false
+  # Description: Whether or not Collaborators tab feature is enabled
+  collaboratorsTabEnabled: "false"
 
 # Trace Thread configuration
 traceThreadConfig:
