[NA] [BE][FE][SDK] Rename OPIK_BUILTIN to OPIK_FREE and improve free model UX
Rename internal terminology from OPIK_BUILTIN to OPIK_FREE and enhance
the user experience for the free model in the Playground.

- Display free model directly in model selector (not in a dropdown/submenu)
- Show model as "gpt-4o-mini (free)" with Opik icon for clear identification
- Dynamic model label from backend config via `model_label` field
- Provider label changed from "Opik Built-in" to "Opik"
- Description updated to "Free model provided by Opik - no API key required"
- API key name changed to "OPIK_FREE_MODEL_API_KEY" in configuration page
- Free model included in search/filter results

- LlmProvider enum: OPIK_BUILTIN → OPIK_FREE (value: "opik-free")
- Package rename: opikbuiltin → freemodel
- Class renames: OpikBuiltin* → FreeModel*
- Config: opikbuiltinProviderEnabled → opikfreeProviderEnabled
- Environment variable: TOGGLE_OPIKBUILTIN_PROVIDER_ENABLED → TOGGLE_OPIKFREE_PROVIDER_ENABLED
- Added model_label to provider configuration for dynamic UI display

- PROVIDER_TYPE.OPIK_BUILTIN → PROVIDER_TYPE.OPIK_FREE
- PROVIDER_MODEL_TYPE.OPIK_BUILTIN_MODEL → PROVIDER_MODEL_TYPE.OPIK_FREE_MODEL
- Feature toggle: OPIKBUILTIN_PROVIDER_ENABLED → OPIKFREE_PROVIDER_ENABLED
- Refactored PromptModelSelect for improved free model presentation

- TypeScript SDK provider types updated
- OpenAPI specs updated

--- a/apps/opik-documentation/documentation/fern/openapi/opik.yaml
+++ b/apps/opik-documentation/documentation/fern/openapi/opik.yaml
@@ -11828,7 +11828,7 @@ components:
           - openrouter
           - vertex-ai
           - custom-llm
-          - opik-builtin
+          - opik-free
         api_key:
           type: string
         name:
@@ -11892,7 +11892,7 @@ components:
           - openrouter
           - vertex-ai
           - custom-llm
-          - opik-builtin
+          - opik-free
         api_key:
           type: string
         name:
@@ -11952,7 +11952,7 @@ components:
           - openrouter
           - vertex-ai
           - custom-llm
-          - opik-builtin
+          - opik-free
         api_key:
           type: string
         name:
