--- a/apps/opik-backend/src/test/resources/config-test.yml
+++ b/apps/opik-backend/src/test/resources/config-test.yml
@@ -461,7 +461,7 @@ serviceToggles:
   customllmProviderEnabled: "true"
   # Default: true
   # Description: Whether or not Opik Built-in provider is enabled
-  opikbuiltinProviderEnabled: "true"
+  opikfreeProviderEnabled: "true"
   # Default: false
   # Description: Whether or not Collaborators tab feature is enabled
   collaboratorsTabEnabled: "false"
