--- a/tests_end_to_end/models_config.yaml
+++ b/tests_end_to_end/models_config.yaml
@@ -8,6 +8,7 @@ providers:
     display_name: "OpenAI"
     api_key_env_var: "OPENAI_API_KEY"
     models:
+        enabled: true
       - name: "GPT 5.1"
         ui_selector: "GPT 5.1"
         enabled: true
