--- a/apps/opik-backend/config.yml
+++ b/apps/opik-backend/config.yml
@@ -602,7 +602,7 @@ serviceToggles:
   customllmProviderEnabled: ${TOGGLE_CUSTOMLLM_PROVIDER_ENABLED:-"true"}
   # Default: true
   # Description: Whether or not Opik Free Model provider is enabled
-  opikfreeProviderEnabled: ${TOGGLE_OPIKFREE_PROVIDER_ENABLED:-"true"}
+  opikFreeProviderEnabled: ${TOGGLE_OPIK_FREE_PROVIDER_ENABLED:-"true"}
   # Default: false
   # Description: Whether or not Collaborators tab feature is enabled
   collaboratorsTabEnabled: ${TOGGLE_COLLABORATORS_TAB_ENABLED:-"false"}
