--- a/apps/opik-backend/config.yml
+++ b/apps/opik-backend/config.yml
@@ -573,9 +573,9 @@ serviceToggles:
   # Default: true
   # Description: Whether or not export/download functionality is enabled
   exportEnabled: ${TOGGLE_EXPORT_ENABLED:-"true"}
-  # Default: false
+  # Default: true
   # Description: Whether or not Dashboards feature is enabled
-  dashboardsEnabled: ${TOGGLE_DASHBOARDS_ENABLED:-"false"}
+  dashboardsEnabled: ${TOGGLE_DASHBOARDS_ENABLED:-"true"}
   # Default: false
   # Description: Whether or not dataset versioning feature is enabled
   datasetVersioningEnabled: ${TOGGLE_DATASET_VERSIONING_ENABLED:-"false"}
@@ -769,4 +769,3 @@ freeModel:
   # Description: API key for the endpoint (optional for auth-less endpoints)
   # Default: empty
   apiKey: ${OPIK_FREE_MODEL_API_KEY:-}
-
