--- a/apps/opik-backend/src/test/resources/config-test.yml
+++ b/apps/opik-backend/src/test/resources/config-test.yml
@@ -432,9 +432,9 @@ serviceToggles:
   # Default: true
   # Description: Whether or not export/download functionality is enabled
   exportEnabled: "true"
-  # Default: false
+  # Default: true
   # Description: Whether or not Dashboards feature is enabled
-  dashboardsEnabled: "false"
+  dashboardsEnabled: "true"
   # Default: true for testing
   # Description: Whether or not dataset versioning feature is enabled
   datasetVersioningEnabled: "true"
