Fix zookeeper chart to support multiple replicas migration from bitnami chart

--- a/deployment/helm_chart/opik/values.yaml
+++ b/deployment/helm_chart/opik/values.yaml
@@ -605,6 +605,9 @@ clickhouse:
 zookeeper:
   enabled: true
   fullnameOverride: opik-zookeeper
+  # Server ID offset for Zookeeper cluster. Default is 1 for compatibility with
+  # previous Bitnami-based installations. Set to 0 only for fresh installs.
+  serverIdOffset: 1
   image:
     registry: docker.io
     repository: zookeeper
@@ -624,6 +627,8 @@ zookeeper:
   extraEnvVars:
     - name: ZK_HEAP_SIZE
       value: "512M"
+    - name: ZOO_DATA_DIR
+      value: "/bitnami/zookeeper/data"
 
     # resources:
     #   requests:
