[BE] Add optimization log sync service with Redis to S3 streaming
- Add OptimizationLogSyncService for syncing logs from Redis to S3
- Add OptimizationLogFlusherJob scheduled job (runs every 5min)
- Add OptimizationLogsConfig for configuration
- Implement gzip compression for log files
- Optimize hasNewLogs() to use HMGET (single Redis call vs two)
- Refactor optimizer execution from RQ worker thread to isolated subprocess
- Add RedisBatchLogCollector in Python for streaming logs to Redis
- Add Rich console log capture with ANSI code handling
- Add configurable terminal width via STUDIO_LOG_TERM_WIDTH
- Add comprehensive unit tests for OptimizationLogSyncService

--- a/apps/opik-backend/config.yml
+++ b/apps/opik-backend/config.yml
@@ -419,6 +419,27 @@ onlineScoring:
       pendingMessageDuration: ${REDIS_SCORING_SPAN_USER_DEFINED_METRIC_PYTHON_PENDING_MESSAGE_DURATION:-}
       maxRetries: ${REDIS_SCORING_SPAN_USER_DEFINED_METRIC_PYTHON_MAX_RETRIES:-}
 
+# Configuration for Optimization Studio logs synchronization
+optimizationLogs:
+  # Default: true
+  # Description: Whether log synchronization from Redis to S3 is enabled
+  enabled: ${OPTIMIZATION_LOGS_ENABLED:-true}
+  # Default: 2m
+  # Description: Interval between log sync runs
+  syncInterval: ${OPTIMIZATION_LOGS_SYNC_INTERVAL:-2m}
+  # Default: 30s
+  # Description: Lock timeout for distributed lock during sync
+  lockTimeout: ${OPTIMIZATION_LOGS_LOCK_TIMEOUT:-30s}
+  # Default: 5s
+  # Description: Maximum time to wait for lock acquisition
+  lockWaitTimeout: ${OPTIMIZATION_LOGS_LOCK_WAIT_TIMEOUT:-5s}
+  # Default: optimization-logs
+  # Description: S3 path prefix for optimization logs
+  s3PathPrefix: ${OPTIMIZATION_LOGS_S3_PATH_PREFIX:-optimization-logs}
+  # Default: 100
+  # Description: Maximum number of optimizations to process per sync cycle
+  maxOptimizationsPerSync: ${OPTIMIZATION_LOGS_MAX_PER_SYNC:-100}
+
 # LLM providers client configuration
 llmProviderClient:
   # Default: 3
